# mmarin1m.github.io

./: MyAirBuddyAndIPrivacyPolicy.html  index.html
MABAI/: build.gradle  lint - Copy.xml  lint.xml
MABAI/android/view/: annotations.xml
MABAI/app/: build.gradle  build.gradleback  fabric.properties  google-services.json
MABAI/app/debug/: app-debug.apk
MABAI/app/release/: output-metadata.json
MABAI/app/release/release/: output-metadata.json
MABAI/app/src/: libdivecomputer.c  libdivecomputer.h
MABAI/app/src/main/: AndroidManifest.xml
MABAI/app/src/main/cpp/: CMakeLists.txt  myairbuddyandi.cpp  myairbuddyandi_old.cpp
MABAI/app/src/main/java/ca/myairbuddyandi/: AboutActivity.java  AcknowledgementsActivity.java  Acronym.java  AcronymActivity.java  AcronymAdapter.java  AcronymComparatorAcronym.java  AcronymComparatorDescription.java  AcronymFilter.java  AirDA.java  AirDBHelper.java  Backup.java  BackupActivity.java  Bluetooth.java  BluetoothBondState.java  BluetoothBytesParser.java  BluetoothCallback.java  BluetoothConnectionPriority.java  BluetoothConnectionState.java  BluetoothError.java  BluetoothGattStatus.java  BluetoothHciStatus.java  BluetoothLePickActivity.java  BluetoothLePickAdapter.java  BluetoothOperationType.java  BluetoothScanFailure.java  BluetoothScanMode.java  BluetoothWriteType.java  CalcAverageDepth.java  CalculateAltitude.java  CalculateAltitudeActivity.java  CalculateBoyleLaw.java  CalculateBoyleLawActivity.java  CalculateBuoyancy.java  CalculateBuoyancyActivity.java  CalculateCharlesLaw.java  CalculateCharlesLawActivity.java  CalculateCurrent.java  CalculateCurrentActivity.java  CalculateCurrentDeviation.java  CalculateCurrentDeviationActivity.java  (+230 more)
MABAI/app/src/main/res/drawable/: ic_calculate.xml  ic_calculator.xml  ic_cylinder.xml  ic_details.xml  ic_dive.xml  ic_diver.xml  ic_drift_pressure.xml  ic_emergency.xml  ic_emergency_pressure.xml  ic_launcher_foreground.xml  ic_menu_drift.xml  ic_menu_planning.xml  ic_menu_rock_bottom.xml  ic_menu_rule_of_thirds.xml  ic_menu_sac_rmv.xml  ic_menu_turnaround.xml  ic_my_air_buddy_and_i.xml  ic_segment.xml  ic_stop.xml  ic_turnaround_pressure.xml  ic_usage.xml  side_nav_bar.xml
MABAI/app/src/main/res/layout/: about_activity.xml  acknowledgements_activity.xml  acronym.xml  acronym_activity.xml  acronym_header.xml  activity_main.xml  app_bar_main.xml  backup_activity.xml  bluetooth_le_pick.xml  bluetooth_le_pick_activity.xml  bluetooth_le_pick_header.xml  busy_dialog.xml  calculate_altitude_activity.xml  calculate_boyle_law_activity.xml  calculate_buoyancy_activity.xml  calculate_charles_law_activity.xml  calculate_current_activity.xml  calculate_current_deviation_activity.xml  calculate_cylinder_activity.xml  calculate_dalton_law_activity.xml  calculate_descent_ascent_activity.xml  calculate_ead_activity.xml  calculate_end_activity.xml  calculate_gas_activity.xml  calculate_nitrox_activity.xml  calculate_pressure_activity.xml  calculate_rmv_activity.xml  calculate_swimming_distance_activity.xml  calculate_trimix_activity.xml  calculate_unit_activity.xml  computer_activity.xml  computer_dive_activity.xml  computer_dive_download_progress_bar.xml  computer_dives_list_activity.xml  computer_dives_pick.xml  computer_dives_pick_activity.xml  computer_dives_pick_header.xml  computer_pick.xml  computer_pick_activity.xml  computer_pick_header.xml  (+82 more)
MABAI/app/src/main/res/layout-land/: cylinder_pick.xml  cylinder_pick_header.xml  dive_pick.xml  dive_pick_header.xml  groupp_cylinder_data.xml  groupp_cylinder_header.xml
MABAI/app/src/main/res/layout-large/: drift_activity.xml  turnaround_activity.xml
MABAI/app/src/main/res/menu/: activity_main_drawer.xml  main.xml
MABAI/app/src/main/res/values/: arrays.xml  colors.xml  dimens.xml  strings.xml  styles.xml  themes.xml
MABAI/app/src/main/res/values-en/: strings.xml
MABAI/app/src/main/res/values-en-rCA/: strings.xml
MABAI/app/src/main/res/values-en-rUS/: strings.xml
MABAI/app/src/main/res/values-es/: arrays.xml  strings.xml
MABAI/app/src/main/res/values-es-rPR/: strings.xml
MABAI/app/src/main/res/values-es-rUS/: strings.xml
MABAI/app/src/main/res/values-fr/: arrays.xml  strings.xml
MABAI/app/src/main/res/values-fr-rCA/: arrays.xml  strings.xml
MABAI/app/src/main/res/values-v21/: styles.xml  themes.xml
MABAI/app/src/main/res/xml/: dive_settings.xml  my_backup_rules.xml
MABAI/gradle/wrapper/: gradle-wrapper.properties
MABAI/release/: output-metadata.json
en/: MyAirBuddyAndIPrivacyPolicy.html
es/: MyAirBuddyAndIPrivacyPolicy.html  index.html
fr/: MyAirBuddyAndIPrivacyPolicy.html  index.html
